Add build status commands to CLI
